# btc-autoresearch

./: .env.example  .gitignore  README.md  program.md  pyproject.toml
btc_autoresearch/: __init__.py  alpaca.py  backtester.py  cli.py  config.py  data.py  db.py  indicators.py  models.py  obsidian.py  paper.py  promotion.py  reporting.py  research_agent.py  risk.py  scoring.py  simple_yaml.py  strategy_io.py
config/: config.yaml
dashboard/: app.py
obsidian_vault/BTC/: Active Strategies.md  Strategy Backlog.md
obsidian_vault/BTC/.obsidian/: graph.json  workspace.json
obsidian_vault/BTC/01_Strategy_Research/: RSI 1D Recovery.md  RSI 4H Pullback.md
obsidian_vault/BTC/02_Extracted_Strategies/: BTC 1D Momentum Filter.md  RSI 1D Recovery.md  RSI 4H Pullback.md  RSI Mean Reversion.md  RSI Starter 1D P10 25-50.md  RSI Starter 4H P10 20-50.md
obsidian_vault/BTC/03_Backtest_Reports/: Backtest Summary.md
obsidian_vault/BTC/04_Paper_Trading_Logs/: Paper Trade Log.md
obsidian_vault/BTC/05_Retired_Strategies/: RSI Starter 4H P21 30-50.md
obsidian_vault/BTC/06_Active_Strategies/: BTC 1D Momentum Filter.md  RSI Starter 1D P10 25-50.md  RSI Starter 4H P10 20-50.md  RSI Starter 4H P21 30-50.md  SMA Trend Following.md
paper_trading/: paper_trades.csv
research/: README.md
strategies/yaml/: rsi-mean-reversion.yaml  sma-trend-following.yaml
tests/: test_backtester.py  test_paper_lifecycle.py  test_risk.py  test_scoring.py  test_strategy_validation.py
